--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,3 +16,27 @@
 @import url('./badges.css');
 @import url('./back-link.css');
 @import url('./footer.css');
+
+.gallery{
+padding: 0;
+display: flex;
+flex-direction: row;
+list-style-type: none;
+justify-content: center;
+flex-wrap: wrap;
+gap: 24px;
+width: calc(100%-360px);
+margin: 24px 0;
+}
+.gallery img{
+height: 200px;
+width: 360px;
+}
+.gallery li{
+transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.gallery li:hover,.gallery li:focus{
+transform: scale(1.05);
+cursor: pointer;
+}
