--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -40,3 +40,37 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 transform: scale(1.05);
 cursor: pointer;
 }
+form{
+padding: 24px;
+display: flex;
+flex-direction: column;
+align-items: center;
+
+}
+label{
+display: flex;
+flex-direction: column;
+gap: 8px;
+align-items: flex-start;
+}
+form button{
+margin-top: 16px;
+border: none;
+color: aliceblue;
+background-color: #4E75FF;
+border-radius: 8px;
+width: 95px;
+height: 40px;
+}
+form input{
+width: 360px;
+height: 40px;
+}
+form textarea{
+width: 360px;
+height: 80px;
+}
+form button:hover{
+background-color: #6C8CFF;
+transition: background-color 0.2s ease-in;
+}
